<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.user.myokusuri.DetailEditFragment">

    <TextView
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffff"
        android:text="@string/item_date"
        android:textAlignment="center"
        android:textSize="50sp"
        />
    <Button
        android:id="@+id/button_prevShohou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date"
        android:text="@string/prev_shohou"
        />
    <TextView
        android:id="@+id/text_shohouPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date"
        android:layout_centerHorizontal="true"
        android:text="@string/shohou_page"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/button_nextShohou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date"
        android:layout_alignParentEnd="true"
        android:text="@string/next_shohou"
        />
    <ScrollView
        android:id="@+id/scroll_shohousen"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:layout_below="@id/button_prevShohou"
        android:fadeScrollbars="false"
        >
        <include
            layout="@layout/shohousen"
            android:id="@+id/shohousen_layout"
        />
<!--
        <LinearLayout
            android:id="@+id/shohousen_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        </LinearLayout>
-->
    </ScrollView>

</RelativeLayout>
